cambios de texto

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UrielRosasBaterista</title>
+    
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -47,22 +48,22 @@
                 <h2>INFORMACIÓN:</h2>
                  <br><br><br><br>
                 
-                     Aprende batería a través de tus canciones favoritas. <br>
+                     Aprende batería a través de tus canciones favoritas. <br><br>
 Desarrollaremos la teoría, técnica, solfeo rítmico a través de las canciones que elijas y/o métodos de batería. <br>
-Y las herramientas necesarias para: <br>
+Y las herramientas necesarias para: 
 Tocar, escuchar, imitar, transcribir, analizar, modificar y crear ritmos. <br>
 <br>
-INCLUYE EL SIGUIENTE MATERIAL DE ESTUDIO: <br>
+INCLUYE EL SIGUIENTE MATERIAL DE ESTUDIO: <br><br>
 -Canciones y partituras personalizadas a tu nivel. <br>
 -Audios para practicar. <br>
--Hojas con definiciones teóricas. <br>
-¿PARA QUÉ NIVEL? <br>
-Principiante e intermedio. <br>
+-Hojas con definiciones teóricas. <br><br>
+¿PARA QUÉ NIVEL? <br><br>
+Principiante e intermedio. <br><br>
 El pago es por clase, no mensual. <br>
 El día y horario es a convenir. <br>
 <br><br><br><br>
 <h2>CONTACTO:</h2> <br>
-Contacto directo a través de las redes sociales: <br>
+Contacto directo a través de las redes sociales: <br><br>
 <a href="https://www.facebook.com/urielrosasmusico/" target="_blanck" style="color: black;" >facebook.com/urielrosasmusico </a> <br>
 <a href="https://www.instagram.com/urielrosasmusico/" target="_blanck" style="color: black;" >instagram.com/urielrosasmusico</a> <br>
 <a href="https://www.youtube.com/urielrosasmusico" target="_blanck" style="color: black;" >youtube.com/urielrosasmusico</a> <br>
@@ -71,7 +72,7 @@ Contacto directo a través de las redes sociales: <br>
 Llevo aproximadamente 8 años dando clase en escuelas privadas y clases particulares
  a niñ@s desde 6 años en adelante. <br>
 Utilizo varios métodos con mnemotécnias para aprender auditiva y visualmente desde diferentes perspectivas. <br>
-Me gusta enseñar con canciones que sean de su elección para que sea aún más agradable el avance. <br>
+Me gusta enseñar con canciones que sean de su elección para que sea aún más agradable el avance. <br><br>
 La siguiente lista contiene algunas canciones que me han pedido alumnas y alumnos<br>
  (si te interesa alguna de estas canciones, la podemos aprender o hacemos tu propia lista para tocar en la batería). <br>
  <br><br><br><br>
