--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>UrielRosasBaterista</title>
     
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
