--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
 
     <!-- Sección 1 -->
-    <section id="seccion-1">
-        <img id="header" src="img/fondo.jpeg" alt="header">
+    <section id="seccion-1" style="width: 100%;" height="100%">
+        <img id="header" src="img/fondo.jpeg" alt="header" style="width: 100%;" height="100%">
         
     </section>
 
@@ -46,7 +46,7 @@
         <div class="text">
             <br><br><br><br>
                 <h2>INFORMACIÓN:</h2>
-                 <br><br><br><br>
+                 <br><br><br>
                 
                      Aprende batería a través de tus canciones favoritas. <br><br>
 Desarrollaremos la teoría, técnica, solfeo rítmico a través de las canciones que elijas y/o métodos de batería. <br>
@@ -61,13 +61,13 @@ INCLUYE EL SIGUIENTE MATERIAL DE ESTUDIO: <br><br>
 Principiante e intermedio. <br><br>
 El pago es por clase, no mensual. <br>
 El día y horario es a convenir. <br>
-<br><br><br><br>
+<br><br><br>
 <h2>CONTACTO:</h2> <br>
 Contacto directo a través de las redes sociales: <br><br>
 <a href="https://www.facebook.com/urielrosasmusico/" target="_blanck" style="color: black;" >facebook.com/urielrosasmusico </a> <br>
 <a href="https://www.instagram.com/urielrosasmusico/" target="_blanck" style="color: black;" >instagram.com/urielrosasmusico</a> <br>
 <a href="https://www.youtube.com/urielrosasmusico" target="_blanck" style="color: black;" >youtube.com/urielrosasmusico</a> <br>
-<br><br><br><br>
+<br><br><br>
 <h2>MÉTODO DE ENSEÑANZA</h2> <br>
 Llevo aproximadamente 8 años dando clase en escuelas privadas y clases particulares
  a niñ@s desde 6 años en adelante. <br>
@@ -75,9 +75,9 @@ Utilizo varios métodos con mnemotécnias para aprender auditiva y visualmente d
 Me gusta enseñar con canciones que sean de su elección para que sea aún más agradable el avance. <br><br>
 La siguiente lista contiene algunas canciones que me han pedido alumnas y alumnos<br>
  (si te interesa alguna de estas canciones, la podemos aprender o hacemos tu propia lista para tocar en la batería). <br>
- <br><br><br><br>
- <h2>Canciones</h2>
- <br><p>
+ <br><br><br>
+
+ <p>
 ACDC - Back in black <br>
 ACDC - Highway to Hell <br>
 Adele - Rolling in the Deep <br>
