--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@ Contacto directo a través de las redes sociales: <br><br>
 <a href="https://www.instagram.com/urielrosasmusico/" target="_blanck" style="color: black;" >instagram.com/urielrosasmusico</a> <br>
 <a href="https://www.youtube.com/urielrosasmusico" target="_blanck" style="color: black;" >youtube.com/urielrosasmusico</a> <br>
 <br><br><br>
+
+
 <h2>MÉTODO DE ENSEÑANZA</h2> <br>
-Llevo aproximadamente 8 años dando clase en escuelas privadas y clases particulares
- a niñ@s desde 6 años en adelante. <br>
+Llevo aproximadamente 8 años dando clase en escuelas privadas y clases particulares a niñ@s desde 6 años en adelante. <br>
 Utilizo varios métodos con mnemotécnias para aprender auditiva y visualmente desde diferentes perspectivas. <br>
 Me gusta enseñar con canciones que sean de su elección para que sea aún más agradable el avance. <br><br>
 La siguiente lista contiene algunas canciones que me han pedido alumnas y alumnos<br>
