--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@ Contacto directo a través de las redes sociales: <br><br>
 <br><br><br>
 
 <div class="text2">
-<h2>MÉTODO DE ENSEÑANZA</h2> <br>
+<h2>MÉTODO DE ENSEÑANZA</h2> <br><p>
 Llevo aproximadamente 8 años dando clase en escuelas privadas y clases particulares a niñ@s desde 6 años en adelante. <br>
 Utilizo varios métodos con mnemotécnias para aprender auditiva y visualmente desde diferentes perspectivas. <br>
 Me gusta enseñar con canciones que sean de su elección para que sea aún más agradable el avance. <br><br>
 La siguiente lista contiene algunas canciones que me han pedido alumnas y alumnos<br>
- (si te interesa alguna de estas canciones, la podemos aprender o hacemos tu propia lista para tocar en la batería). <br>
+ (si te interesa alguna de estas canciones, la podemos aprender o hacemos tu propia lista para tocar en la batería). </p><br>
  <br><br><br>
  
  <p>
