--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Navegación -->
     <nav>
 
-        <div class="uriel" style="color: white;" >Uriel Rosas</div>
+        <div class="uriel" style="color: white;padding-left: 17px;width: 48%;">Uriel Rosas</div>
 
             <Div class="redes">
                 <ul>
