--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </Div>
         
         <div class="ini">
-        <a href="#seccion-1">Inicio</a>
+        <a id="info" style="margin-right: 5px;" href="#seccion-2">Informacion</p>   </a>
       
     </div>
     </nav>
