--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         </Div>
         
         <div class="ini">
-        <a id="info" style="margin-right: 5px;" href="#seccion-2">CLASES DE BATERÍA ONLINE
+        <a id="info" style="margin-right: 5px;" href="#seccion-2">
+Información
 </p>   </a>
       
     </div>
