--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ Información
         <div class="text">
             <br><br><br><br>
                 <h1>CLASES DE BATERÍA ONLINE
-</h1>
-                 <br><br><br>
+</h1> <br><br><br><br>
+                
             
             Aprende batería a través de tus canciones favoritas.<br>
 Enfocadas para nivel principiante o intermedio, para niñas y niños desde 6 años, <br>
@@ -111,7 +111,8 @@ El día y horario es a convenir.<br><br><br>
 <div class="text2">
 <h2>MÉTODO DE ENSEÑANZA</h2> <br><br><p>
 Mi nombre es Uriel Rosas, llevo aproximadamente 8 años dando clases privadas y en escuelas de 
-música. Utilizo varios métodos con mnemotecnias para aprender auditiva y visualmente desde 
+música.<br>
+    Utilizo varios métodos con mnemotecnias para aprender auditiva y visualmente desde 
 diferentes perspectivas.
 
  <br><br><br>
