--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ diferentes perspectivas.
    <h2><b>EJEMPLOS DE CANCIONES</b></h2>
     
     <br><br>
-    La siguiente lista contiene algunas canciones que me han pedido alumnas y alumnos.
+    La siguiente lista contiene algunas canciones que me han pedido alumnas y alumnos.<br>
 Si te interesa alguna de estas canciones, la podemos aprender o hacemos tu propia lista para tocar 
 en la batería.
  <br><br><br>
