--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ El día y horario es a convenir.<br><br><br>
 <br><br><br>
 
 <div class="text2">
-<h2><b>MÉTODO DE ENSEÑANZA</b></h2> <br><br><p>
+<h2><b>MÉTODO DE ENSEÑANZA</b></h2> <br><br>
 Mi nombre es Uriel Rosas, llevo aproximadamente 8 años dando clases privadas y en escuelas de 
 música.<br>
     Utilizo varios métodos con mnemotecnias para aprender auditiva y visualmente desde 
